--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ Flask-Migrate==4.1.0
 Flask-RESTful==0.3.10
 Flask-SQLAlchemy==3.1.1
 greenlet==3.1.1
+gunicorn==23.0.0
 idna==3.10
 importlib_metadata==8.5.0
 importlib_resources==6.4.5
@@ -17,6 +18,7 @@ itsdangerous==2.2.0
 Jinja2==3.1.6
 Mako==1.3.10
 MarkupSafe==2.1.5
+packaging==25.0
 python-dotenv==1.0.1
 pytz==2025.2
 requests==2.32.4
