--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ Jinja2==3.1.6
 Mako==1.3.10
 MarkupSafe==2.1.5
 packaging==25.0
+psycopg2==2.9.10
 python-dotenv==1.0.1
 pytz==2025.2
 requests==2.32.4
